# gasleak

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ec2_prices.json  instance_prices.json
src/: cli.rs  config.rs  contract.rs  error.rs  format.rs  identity.rs  json.rs  lib.rs  main.rs  model.rs  pricing.rs  report.rs  staleness.rs
src/aws/: cloudwatch.rs  ec2.rs  errors.rs  mod.rs
src/slack/: mod.rs  render.rs
tests/: slack_webhook.rs
