[package]
name = "gasleak"
version = "0.1.0"
edition = "2024"
description = "CLI for scanning EC2 instances, estimating cost, and flagging stale resources"
license = "MIT OR Apache-2.0"
repository = "https://github.com/powerslider/gasleak"
homepage = "https://github.com/powerslider/gasleak"
documentation = "https://docs.rs/gasleak"

[lib]
path = "src/lib.rs"

[[bin]]
name = "gasleak"
path = "src/main.rs"

[dependencies]
aws-config = "1"
aws-sdk-ec2 = "1"
aws-sdk-cloudwatch = "1"
aws-smithy-types = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
jiff = { version = "0.2", features = ["serde"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
